plugins/javaFX/testData/highlighting/defaultTagProperties.fxml
<?xml version="1.0" encoding="UTF-8"?>

<?import javafx.scene.layout.GridPane?>
<?import javafx.scene.control.Label?>

<GridPane fx:id="gp"
          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
  <fx:script>
  </fx:script>
  <fx:<error descr="Cannot resolve symbol 'fx:id'">id</error>/>
  <Label fx:id="label" GridPane.rowIndex="1" <error descr="Attribute fx:script is not allowed here">fx:script</error>=""/>
</GridPane>
